--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <link rel="stylesheet" href="css/index.css" text="text/css">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/jquery.fullPage.js"></script>
     <script src="js/index.js"></script>
