--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <p>공감과 소통을 통해<br>신뢰를 형성하여, 지속 가능한<br>광계를 형성하는 인재</p>
             </div>
         </section>
-        <footer class="section footer-wrap fp-auto-height">
+<!--         <footer class="section footer-wrap fp-auto-height">
             <div class="footer">
                 <ul>
                     <li><a href="#">서가앤쿡</a></li>
@@ -214,7 +214,7 @@
                     <span>COPYRIGHTⓒ DAILYKING INC. ALL RIGHT RESERVED</span>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </div>
 </body>
 </html>
